--- a/user-service/.env
+++ b/user-service/.env
@@ -4,3 +4,5 @@ DB_USER=postgres
 DB_PASSWORD=lemontea
 DB_NAME=blog_user_service
 GRPC_PORT=50051
+REDIS_PASSWORD=QONiT5YPRVElKpXbt49yRKEZWFTQaOI3
+REDIS_ADDR=redis-12975.c295.ap-southeast-1-1.ec2.redns.redis-cloud.com
