--- a/user-service/.env
+++ b/user-service/.env
@@ -5,4 +5,4 @@ DB_PASSWORD=lemontea
 DB_NAME=blog_user_service
 GRPC_PORT=50051
 REDIS_PASSWORD=QONiT5YPRVElKpXbt49yRKEZWFTQaOI3
-REDIS_ADDR=redis-12975.c295.ap-southeast-1-1.ec2.redns.redis-cloud.com
+REDIS_ADDR=redis-12975.c295.ap-southeast-1-1.ec2.redns.redis-cloud.com:12975
