feat(dockerfile): add dockerfile to all service and dokcer-compose file

--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,15 +1,15 @@
-FROM golang:1.16-alpine
+FROM golang:latest
 
 WORKDIR /app
 
-COPY go.mod .
-COPY go.sum .
+COPY go.mod go.sum ./
+COPY cmd/ cmd/
+COPY internal/ internal/
+
 RUN go mod download
 
-COPY . .
-
-RUN go build -o /api-gateway ./cmd/main.go
+RUN go build -o api-gateway ./cmd/main.go
 
 EXPOSE 8080
 
-CMD ["/api-gateway"]
+CMD ["./api-gateway"]
