--- a/comment-service/Dockerfile
+++ b/comment-service/Dockerfile
@@ -8,8 +8,8 @@ COPY internal/ internal/
 
 RUN go mod download
 
-RUN go build -o user-service ./cmd/main.go
+RUN go build -o comment-service ./cmd/main.go
 
-EXPOSE 50051
+EXPOSE 50053
 
-CMD ["./user-service"]
+CMD ["./comment-service"]
